<resources>
    <string name="app_name">Scouter</string>

    <string name="nameField">Name</string>
    <string name="squatMaxField">Squat Max</string>
    <string name="benchMaxField">Bench Max</string>
    <string name="deadliftMaxField">Deadlift Max</string>
    <string name="computeButton">Compute</string>


    <string name="weakerChallengerButton">Weaker Challenger</string>
    <string name="strongerChallengerButton">Stronger Challenger</string>
    <string name="newReadingButton">New Reading</string>
    <string name="scouterDisplayButton">Scouter Display</string>
    <string name="userInfo">User Name - Power Level</string>
    <string name="characterInfo">Saga: Character Name - Power Level</string>

    <string name="otherCharText1">Weaker Challenger</string>
    <string name="otherCharText0">Stronger Challenger</string>
    <string name="encounteredLifeforms">Encountered Lifeforms</string>

    <string name="nextButtonText">Next Lifeform</string>
    <string name="previousButtonText">Previous Lifeform</string>

    <string name="thorButton">All lifeforms</string>

    <string name="congrats_text">Congratulations! Upon finding The Mountain, you have unlocked all
        of the characters in the Dragon Ball Universe.</string>
</resources>
